07/06/2008	1.3 release

07/05/2008	Small change because the Mozilla people changed something in Firefox 3

03/11/2008	1.2 release

03/11/2008	Added another "bonus" language. N.B. http://www.logarithmic.net/pfh-files/blog/01173253837/rot180.html and http://rishida.net/scripts/uniview/conversion.php
03/11/2008	Added option to toggle top-bar and top-right clocks
03/10/2008	Added clock to top bar
03/10/2008	Added Czech language (thanks to Martin Kiklhorn, martin at hej dot cz)
03/10/2008 	Added option to repeat time-bar every 5- 10- etc. rows.
03/10/2008	Added 12/24 hour clock option

02/13/2007	1.1 release

02/01/2007	Several new stylesheets
01/06/2007	IE7 compatibility

06/16/2006	1.0 release

06/16/2006	Localized the time-and-date display, since javascript's local date function "toLocaleString()" doesn't really work.
06/16/2006	Added the ability to automatically refresh listings hourly.

03/19/2006	0.95 release (because I'm scared of 1.0!)

03/19/2006	Added some more (bad) translations. Translated the "all" and "none"
03/19/2006	Fixed a bug where the calendar iframe sometimes was not hidden.
03/16/2006	Added the option to display movie release dates within the grid. Good idea from wdreamsmaycome.
03/16/2006	Added an optional class "Newshow" for programs that are being aired for the first time today. I will use border for newshow, background-color for goodmovie, and text-color/decoration plus pointer and hover for clickable.
03/15/2006	Added an optional class "Goodmovie" for movies rated better than a selectable star-rating. Thanks to wdreamsmaycome. I didn't add this to the TitanTV stylesheet, but all others have some sort of background-color indicator.
03/15/2006	Half-stars are only displayed if the decimal part of a rating is 5 or greater, instead of any decimal.
03/14/2006	Changed the dropdown to military time instead of AM/PM. Matches the top row better. And I like it better. My wife will probably be sad, though.