@@ -1,3 +1,7 @@
+03/08/2013	1.31 release
+
+03/08/2013  Small change to get Chrome & IE to work again
+
 07/06/2008	1.3 release
 
 07/05/2008	Small change because the Mozilla people changed something in Firefox 3
